fixed feature section on mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -279,10 +279,12 @@ header .mobile {
   #features-section {
     flex-flow: column;
     padding: 0;
+    width: 100%;
   }
 
   .feature {
-    margin: 0;
+    width: 76%;
+    margin: 0 auto;
     padding: 1.25rem 1rem 0 1rem;
   }
 }
@@ -327,6 +329,7 @@ header .mobile {
 @media only screen and (max-width: 760px) {
   #filters-section {
     padding: 1.5rem 0 0 0;
+    margin-top: 18px;
   }
 
   #filters-section .content {
@@ -347,6 +350,7 @@ header .mobile {
 
   #filters-section .images-container {
     padding: 0;
+    overflow: hidden;
   }
 
   #filters-section .extra {
